feat: 제어 타입 재정의